Add theme toggle component

--- a/src/components/header/style.pcss
+++ b/src/components/header/style.pcss
@@ -10,7 +10,7 @@
 
 .header_logo {
 	display: flex;
-	align-items: flex-start;
+	align-items: start;
 	justify-content: flex-start;
 	width: 50%;
 	padding: calc(var(--space-s) - 2px) 0px;
@@ -18,7 +18,7 @@
 
 .header_actions {
 	display: flex;
-	align-items: flex-start;
+	align-items: center;
 	justify-content: flex-end;
 	width: 50%;
 	gap: var(--space-xs);
