--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,4 +7,5 @@
 	width: 100%;
 	overflow-x: hidden;
 	background-color: var(--color-gray-light-25);
+	font-family: var(--font-body-medium-family);
 }
