--- a/src/components/header/style.pcss
+++ b/src/components/header/style.pcss
@@ -10,7 +10,7 @@
 
 .header_logo {
 	display: flex;
-	align-items: start;
+	align-items: flex-start;
 	justify-content: flex-start;
 	width: 50%;
 	padding: calc(var(--space-s) - 2px) 0px;
