Add search bar in header

--- a/src/components/header/style.pcss
+++ b/src/components/header/style.pcss
@@ -15,6 +15,11 @@
 		padding: calc(var(--space-s) - 2px) 0px;
 	}
 
+	.header_search {
+		width: 100%;
+		max-width: 268px;
+	}
+
 	.header_actions {
 		display: flex;
 		align-items: center;
