--- a/src/components/common/theme-toggle/style.pcss
+++ b/src/components/common/theme-toggle/style.pcss
@@ -16,7 +16,7 @@
 			font-size: 0.875rem;
 			font-weight: 400;
 			text-align: center;
-			color: var(--color-gray-light-600);
+			color: var(--color-gray-600);
 		}
 	}
 }
