--- a/src/components/header/style.pcss
+++ b/src/components/header/style.pcss
@@ -4,7 +4,7 @@
 	width: 100%;
 	min-height: var(--header-height);
 	padding: var(--space-xs) var(--space-xl);
-	background: var(--color-gray-light-25);
+	background: var(--color-gray-25);
 	gap: var(--space-m);
 
 	.header_logo {
@@ -31,6 +31,6 @@
 	.header_divider {
 		width: 1px;
 		height: 100%;
-		background: var(--color-gray-light-100);
+		background: var(--color-gray-100);
 	}
 }
