--- a/src/pages/address/style.pcss
+++ b/src/pages/address/style.pcss
@@ -25,7 +25,7 @@
 				font-size: 0.875rem;
 				font-weight: 400;
 				line-height: 1.125rem;
-				color: var(--color-gray-light-600);
+				color: var(--color-600);
 			}
 		}
 	}
@@ -33,7 +33,7 @@
 		font-size: 2rem;
 		font-weight: 500;
 		line-height: 2.25rem;
-		color: var(--color-gray-light-700);
+		color: var(--color-gray-700);
 		letter-spacing: -0.64px;
 	}
 }
