--- a/src/pages/home/styles.pcss
+++ b/src/pages/home/styles.pcss
@@ -28,14 +28,14 @@
 		font-size: 1rem;
 		font-weight: 400;
 		line-height: 1.25rem;
-		color: var(--color-gray-light-700);
+		color: var(--color-gray-700);
 	}
 
 	.home_title {
 		font-size: 2.5rem;
 		font-weight: 500;
 		line-height: 3.5rem;
-		color: var(--color-gray-light-900);
+		color: var(--color-gray-900);
 	}
 
 	.home_search {
@@ -61,7 +61,7 @@
 		width: 100%;
 		height: 20%;
 		pointer-events: none;
-		background: linear-gradient(180deg, rgba(252, 252, 253, 0) 0%, var(--colors-gray-light-25, #fcfcfd) 78.7%);
+		background: linear-gradient(180deg, rgba(252, 252, 253, 0) 0%, var(--color-gray-25, #fcfcfd) 78.7%);
 	}
 
 	.home_illustration {
