Add page redirect on header logo click

--- a/src/pages/address/styles.pcss
+++ b/src/pages/address/styles.pcss
@@ -6,11 +6,7 @@
 	width: 100%;
 	height: calc(100vh - var(--header-height));
 	gap: var(--space-xl);
-	background: linear-gradient(
-		180deg,
-		var(--colors-neutral-gray-25, #fcfcfd) 0%,
-		var(--colors-neutral-gray-50, #f3f5f6) 100%
-	);
+	background: linear-gradient(180deg, var(--color-gray-25, #fcfcfd) 0%, var(--color-gray-50, #f3f5f6) 100%);
 	.address_description {
 		display: flex;
 		flex-direction: column;
