--- a/src/components/common/theme-toggle/style.pcss
+++ b/src/components/common/theme-toggle/style.pcss
@@ -5,7 +5,7 @@
 	justify-content: center;
 	gap: var(--space-xs);
 
-	.theme_toggle_content {
+	& .theme_toggle_content {
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
