--- a/src/pages/transaction/styles.pcss
+++ b/src/pages/transaction/styles.pcss
@@ -52,7 +52,7 @@
 	display: flex;
 	flex-direction: row;
 	width: 100%;
-	align-items: flex-start;
+	align-items: center;
 	gap: var(--space-m);
 	height: 24px;
 }
