--- a/src/pages/transaction/styles.pcss
+++ b/src/pages/transaction/styles.pcss
@@ -33,7 +33,7 @@
 	letter-spacing: -0.64px;
 }
 
-.transaction_info {
+.transaction_information {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
