--- a/src/components/header/styles.pcss
+++ b/src/components/header/styles.pcss
@@ -7,7 +7,7 @@
 	background: var(--color-gray-25);
 	gap: var(--space-m);
 
-	.header_search {
+	& .header_search {
 		width: 100%;
 		max-width: 268px;
 	}
