--- a/src/components/common/TransactionExecutionInfo/styles.pcss
+++ b/src/components/common/TransactionExecutionInfo/styles.pcss
@@ -1,8 +1,15 @@
 .transaction_execution_info {
 	display: flex;
 	flex-direction: column;
-	gap: var(--space-s);
+	gap: var(--space-m);
 	width: 100%;
+
+	& .transaction_execution_content {
+		display: flex;
+		flex-direction: column;
+		gap: var(--space-s);
+		width: 100%;
+	}
 
 	& .transaction_execution_row {
 		display: flex;
@@ -78,6 +85,27 @@
 			display: flex;
 			justify-content: flex-start;
 			height: 24px;
+		}
+	}
+
+	& .transaction_execution_actions {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		gap: var(--space-xs);
+		width: 100%;
+
+		& .transaction_execution_warning {
+			display: flex;
+			align-items: center;
+			gap: var(--space-xs);
+			width: 100%;
+		}
+
+		& .transaction_execution_warning_text {
+			font-size: 0.875rem;
+			color: var(--color-gray-600);
+			line-height: 1.125rem;
 		}
 	}
 
