--- a/src/pages/transaction/styles.pcss
+++ b/src/pages/transaction/styles.pcss
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	padding: var(--space-xl) var(--space-xl) var(--space-xxxxxl) var(--space-xl);
 	width: 100%;
-	height: calc(100vh - var(--header-height));
+	min-height: calc(100vh - var(--header-height));
 	gap: var(--space-xl);
 	background: linear-gradient(180deg, var(--color-gray-25, #fcfcfd) 0%, var(--color-gray-50, #f3f5f6) 100%);
 	position: relative;
