Create transaction components

--- a/src/components/common/TransactionExecutionInfo/styles.pcss
+++ b/src/components/common/TransactionExecutionInfo/styles.pcss
@@ -1,7 +1,7 @@
 .tx-info {
 	display: flex;
 	flex-direction: column;
-	gap: var(--space-m);
+	gap: var(--space-s);
 	width: 100%;
 
 	& .tx-expand {
@@ -138,6 +138,7 @@
 		flex-direction: column;
 		align-items: flex-start;
 		gap: var(--space-xs);
+		margin-top: var(--space-xxs);
 		width: 100%;
 
 		& .tx-warning {
