Add steps handler in hooks

--- a/src/components/common/ModalHeader/styles.pcss
+++ b/src/components/common/ModalHeader/styles.pcss
@@ -1,11 +1,11 @@
-.support_modal_header {
+.modal_header {
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
 	min-height: 40px;
 	position: relative;
 
-	& .support_modal_title {
+	& .modal_title {
 		font-size: 1.125rem;
 		font-weight: 500;
 		color: var(--color-gray-700);
