Finish the step components for the transaction modal

--- a/src/components/common/TransactionModal/steps/ExecutionStep/styles.pcss
+++ b/src/components/common/TransactionModal/steps/ExecutionStep/styles.pcss
@@ -43,5 +43,18 @@
 				line-height: 1.25rem;
 			}
 		}
+
+		& .verification_step_sublabel {
+			display: flex;
+			align-items: flex-start;
+			gap: var(--space-xxs);
+			width: 100%;
+
+			& .verification_step_sublabel_text {
+				font-size: 0.875rem;
+				line-height: 1.125rem;
+				color: var(--color-gray-600);
+			}
+		}
 	}
 }
