--- a/src/pages/address/styles.pcss
+++ b/src/pages/address/styles.pcss
@@ -7,7 +7,17 @@
 	height: calc(100vh - var(--header-height));
 	gap: var(--space-xl);
 	background: linear-gradient(180deg, var(--color-gray-25, #fcfcfd) 0%, var(--color-gray-50, #f3f5f6) 100%);
-	.address_description {
+
+	& .address_info {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		gap: var(--space-xs);
+		width: 100%;
+	}
+
+	& .address_description {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -25,7 +35,7 @@
 			}
 		}
 	}
-	.address_title {
+	& .address_title {
 		font-size: 2rem;
 		font-weight: 500;
 		line-height: 2.25rem;
