--- a/src/components/common/TableHeading/styles.pcss
+++ b/src/components/common/TableHeading/styles.pcss
@@ -1,9 +1,9 @@
-.data_table_heading {
+.table_heading {
 	display: flex;
 	justify-content: center;
 	width: 100%;
 
-	& .data_table_heading_container {
+	& .table_heading_container {
 		display: grid;
 		max-width: 1184px;
 		width: 100%;
@@ -13,7 +13,7 @@
 		border-bottom: 1px solid var(--color-gray-100);
 	}
 
-	& .data_table_head {
+	& .table_head {
 		display: flex;
 		align-items: center;
 		font-weight: 400;
