--- a/src/components/common/TableRow/styles.pcss
+++ b/src/components/common/TableRow/styles.pcss
@@ -14,4 +14,5 @@
 	font-weight: 400;
 	color: var(--color-gray-700);
 	overflow-wrap: anywhere;
+	padding: var(--space-l) var(--space-l) var(--space-l) var(--space-m);
 }
