Add mock data to check the table

--- a/src/components/common/TableBody/styles.pcss
+++ b/src/components/common/TableBody/styles.pcss
@@ -1,6 +1,8 @@
 .table_body {
 	display: flex;
 	flex-direction: column;
+	max-width: 1184px;
+	margin: 0 auto;
 	align-items: center;
 	width: 100%;
 }
