--- a/src/components/common/TableRow/styles.pcss
+++ b/src/components/common/TableRow/styles.pcss
@@ -2,8 +2,7 @@
 	display: grid;
 	max-width: 1184px;
 	width: 100%;
-	grid-template-columns: repeat(6, 1fr);
-	height: 72px;
+	grid-template-columns: 25% 160px 132px 239px 239px 119px;
 	align-items: center;
 	border-bottom: 1px solid var(--color-gray-100);
 }
