Fix table visuals

--- a/src/components/home/HomeVisuals/DesktopVisuals/styles.pcss
+++ b/src/components/home/HomeVisuals/DesktopVisuals/styles.pcss
@@ -42,17 +42,17 @@
 		width: clamp(160px, 13%, 240px);
 		height: auto;
 		position: absolute;
-		left: 43.5%;
 		bottom: 9%;
 		transform: translateX(-50%);
 		--illustration-rotate: 0deg;
 		animation-delay: 0.5s;
+		animation: desktop_visuals_animation 0.7s cubic-bezier(0.23, 1, 0.32, 1) forwards;
 	}
 
 	& .visual_four {
 		width: clamp(160px, 12.8%, 240px);
 		height: auto;
-		left: 67%;
+		right: 22%;
 		bottom: 9%;
 		--illustration-rotate: -10deg;
 		animation-delay: 0.7s;
