--- a/src/components/home/HomeVisuals/TabletVisuals/styles.pcss
+++ b/src/components/home/HomeVisuals/TabletVisuals/styles.pcss
@@ -17,10 +17,10 @@
 	}
 
 	& .visual_one {
-		width: clamp(104px, 19.9vw, 180px);
-		height: clamp(104px, 19.9vw, 180px);
+		width: clamp(104px, 19.9%, 180px);
+		height: auto;
 		left: 4.3%;
-		bottom: 26.84%;
+		bottom: 33%;
 		--illustration-rotate: -14.66deg;
 		animation-delay: 0.1s;
 		&:hover {
@@ -29,8 +29,8 @@
 	}
 
 	& .visual_two {
-		width: clamp(104px, 20.19vw, 180px);
-		height: clamp(104px, 17vw, 180px);
+		width: clamp(104px, 21.9%, 192px);
+		height: auto;
 		left: 11.43%;
 		bottom: 7%;
 		--illustration-rotate: 15deg;
@@ -40,10 +40,10 @@
 		}
 	}
 	& .visual_three {
-		width: clamp(104px, 22.63vw, 160px);
-		height: clamp(105px, 22.63vw, 160px);
-		left: 40%;
+		width: clamp(104px, 22%, 160px);
+		height: auto;
 		bottom: 22%;
+		transform: translateX(-50%);
 		--illustration-rotate: 0deg;
 		animation-delay: 0.5s;
 		&:hover {
@@ -52,9 +52,9 @@
 	}
 
 	& .visual_four {
-		width: clamp(104px, 18.63vw, 160px);
-		height: clamp(105px, 18.63vw, 160px);
-		right: 15.73%;
+		width: clamp(104px, 18.6%, 160px);
+		height: auto;
+		right: 11.43%;
 		bottom: 7%;
 		--illustration-rotate: -10deg;
 		animation-delay: 0.7s;
@@ -63,10 +63,10 @@
 		}
 	}
 	& .visual_five {
-		width: clamp(104px, 19.9vw, 180px);
-		height: clamp(104px, 19.9vw, 180px);
+		width: clamp(104px, 19.9%, 180px);
+		height: auto;
 		right: 4.3%;
-		bottom: 26.84%;
+		bottom: 33%;
 		--illustration-rotate: 10deg;
 		animation-delay: 0.9s;
 		&:hover {
