--- a/src/components/home/styles.pcss
+++ b/src/components/home/styles.pcss
@@ -5,18 +5,7 @@
 	height: calc(100vh - var(--header-height));
 	position: relative;
 
-	.home_illustrations {
-		position: absolute;
-		left: 0;
-		bottom: 0;
-		width: 100%;
-		height: 100%;
-		display: flex;
-		justify-content: center;
-		align-items: flex-end;
-	}
-
-	.home_blur {
+	& .home_blur {
 		position: absolute;
 		left: 0;
 		bottom: 0;
@@ -24,81 +13,5 @@
 		height: 20%;
 		pointer-events: none;
 		background: linear-gradient(180deg, rgba(252, 252, 253, 0) 0%, var(--color-gray-25, #fcfcfd) 78.7%);
-	}
-
-	.home_illustration {
-		position: absolute;
-		opacity: 0;
-		--illustration-rotate: 0deg;
-		animation: home-animation 0.7s cubic-bezier(0.23, 1, 0.32, 1) forwards;
-		transform: rotate(var(--illustration-rotate));
-		transition: transform 0.7s cubic-bezier(0.23, 1, 0.32, 1);
-	}
-
-	.illustration_one {
-		width: 180px;
-		height: 180px;
-		left: 2.5%;
-		bottom: 20%;
-		--illustration-rotate: -10deg;
-		animation-delay: 0.1s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
-	}
-	.illustration_two {
-		width: 192px;
-		height: 160px;
-		left: 21%;
-		bottom: 9%;
-		--illustration-rotate: 10deg;
-		animation-delay: 0.3s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
-	}
-	.illustration_three {
-		width: 160px;
-		height: 160px;
-		left: 45%;
-		bottom: 9%;
-		--illustration-rotate: 0deg;
-		animation-delay: 0.5s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
-	}
-	.illustration_four {
-		width: 160px;
-		height: 160px;
-		left: 67%;
-		bottom: 9%;
-		--illustration-rotate: -10deg;
-		animation-delay: 0.7s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
-	}
-	.illustration_five {
-		width: 180px;
-		height: 180px;
-		right: 2.5%;
-		bottom: 20%;
-		--illustration-rotate: 10deg;
-		animation-delay: 0.9s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
-	}
-}
-
-@keyframes home-animation {
-	0% {
-		opacity: 0;
-		transform: translateY(60px) rotate(var(--illustration-rotate, 0deg));
-	}
-	100% {
-		opacity: 1;
-		transform: translateY(0) rotate(var(--illustration-rotate, 0deg));
 	}
 }
