Configure images in mobile version

--- a/src/components/home/HomeVisuals/MobileVisuals/styles.pcss
+++ b/src/components/home/HomeVisuals/MobileVisuals/styles.pcss
@@ -17,8 +17,8 @@
 	}
 
 	& .visual_one {
-		width: clamp(104px, 20.73vw, 104px);
-		height: clamp(104px, 20.73vw, 104px);
+		width: 104px;
+		height: auto;
 		left: 4.27%;
 		bottom: 25.64%;
 		--illustration-rotate: -14.66deg;
@@ -28,10 +28,10 @@
 		}
 	}
 	& .visual_three {
-		width: clamp(104px, 27.73vw, 104px);
-		height: clamp(105px, 28vw, 105px);
-		left: 40%;
+		width: 104px;
+		height: auto;
 		bottom: 14.7%;
+		transform: translateX(-50%);
 		--illustration-rotate: 0deg;
 		animation-delay: 0.5s;
 		&:hover {
@@ -40,8 +40,8 @@
 	}
 
 	& .visual_five {
-		width: clamp(104px, 20.73vw, 104px);
-		height: clamp(104px, 20.73vw, 104px);
+		width: 104px;
+		height: auto;
 		right: 4.27%;
 		bottom: 25.64%;
 		--illustration-rotate: -14.66deg;
