--- a/src/components/common/TransactionModal/steps/ExecutionStep/styles.pcss
+++ b/src/components/common/TransactionModal/steps/ExecutionStep/styles.pcss
@@ -1,60 +1,36 @@
-.verification_step {
+.execution_step {
 	display: flex;
 	flex-direction: column;
-	gap: var(--space-m);
 	width: 100%;
+	gap: var(--space-m);
 
-	& .verification_step_container {
+	& .execution_step_description {
 		display: flex;
 		flex-direction: column;
+		align-items: center;
 		gap: var(--space-xs);
 		width: 100%;
 
-		& .verification_step_title {
-			font-size: 0.875rem;
-			line-height: 1.125rem;
+		& .execution_step_title {
+			font-size: 1.5rem;
+			line-height: 1.75rem;
+			font-weight: 500;
+			color: var(--color-gray-700);
+			letter-spacing: -0.48px;
+		}
+
+		& .execution_step_subtitle {
+			font-size: 1rem;
+			text-align: center;
+			line-height: 1.25rem;
+			font-weight: 300;
 			color: var(--color-gray-600);
 		}
+	}
 
-		& .verification_step_content {
-			display: flex;
-			min-height: 32px;
-			padding: var(--space-m);
-			justify-content: space-between;
-			border-radius: var(--border-radius-medium);
-			background: var(--color-gray-50);
-		}
-
-		& .verification_step_info {
-			display: flex;
-			align-items: center;
-			gap: var(--space-xs);
-
-			& .verification_step_icon {
-				width: 32px;
-				height: 32px;
-				border-radius: 100%;
-			}
-
-			& .verification_step_address {
-				font-size: 1rem;
-				font-weight: 500;
-				color: var(--color-gray-700);
-				line-height: 1.25rem;
-			}
-		}
-
-		& .verification_step_sublabel {
-			display: flex;
-			align-items: flex-start;
-			gap: var(--space-xxs);
-			width: 100%;
-
-			& .verification_step_sublabel_text {
-				font-size: 0.875rem;
-				line-height: 1.125rem;
-				color: var(--color-gray-600);
-			}
-		}
+	& .execution_step_actions {
+		display: flex;
+		gap: var(--space-xs);
+		width: 100%;
 	}
 }
