--- a/src/components/header/HeaderBurger/styles.pcss
+++ b/src/components/header/HeaderBurger/styles.pcss
@@ -18,3 +18,25 @@
 		background-color: var(--color-gray-100);
 	}
 }
+
+.header_burger_tablet {
+	display: flex;
+	flex-direction: column;
+	position: fixed;
+	right: var(--space-xl);
+	top: var(--header-height);
+	padding: var(--space-m);
+	max-width: 320px;
+	width: 100%;
+	background-color: var(--color-gray-25);
+	border-radius: var(--border-radius-large);
+	box-shadow: 0 2px 12px 0 var(--color-gray-300);
+	gap: var(--space-s);
+	z-index: 3;
+
+	& .header_burger_divider {
+		width: 100%;
+		height: 1px;
+		background-color: var(--color-gray-100);
+	}
+}
