--- a/src/pages/tx/styles.pcss
+++ b/src/pages/tx/styles.pcss
@@ -1,4 +1,4 @@
-.transaction {
+/* .transaction {
 	display: flex;
 	flex-direction: column;
 	padding: var(--space-xl) var(--space-xl) var(--space-xxxxxl) var(--space-xl);
@@ -81,4 +81,4 @@
 	width: 100%;
 	height: 1px;
 	background-color: var(--color-gray-100);
-}
+} */
