--- a/src/components/common/MessageDetails/styles.pcss
+++ b/src/components/common/MessageDetails/styles.pcss
@@ -8,9 +8,8 @@
 		display: flex;
 		flex-direction: row;
 		width: 100%;
-		align-items: center;
 		gap: var(--space-m);
-		height: 24px;
+		min-height: 24px;
 
 		& > :nth-child(1) {
 			width: 30%;
@@ -25,11 +24,33 @@
 		font-size: 0.875rem;
 		color: var(--color-gray-500);
 		line-height: 1.125rem;
+		word-break: break-word;
+		white-space: normal;
 	}
 
 	& .message_details_value {
 		font-size: 0.875rem;
 		color: var(--color-gray-700);
 		line-height: 1.125rem;
+		word-break: break-word;
+		white-space: normal;
+	}
+}
+
+@media (max-width: 640px) {
+	.message_details .message_details_row {
+		flex-direction: column;
+		gap: var(--space-xs);
+
+		& > :nth-child(1),
+		& > :nth-child(2) {
+			width: 100%;
+		}
+	}
+
+	.message_details .message_details_value {
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
 	}
 }
