--- a/src/components/common/TransactionFinality/styles.pcss
+++ b/src/components/common/TransactionFinality/styles.pcss
@@ -10,7 +10,7 @@
 		width: 100%;
 		align-items: center;
 		gap: var(--space-m);
-		height: 24px;
+		min-height: 24px;
 
 		& > :nth-child(1) {
 			width: 30%;
@@ -25,5 +25,17 @@
 		font-size: 0.875rem;
 		color: var(--color-gray-500);
 		line-height: 1.125rem;
+	}
+}
+
+@media (max-width: 640px) {
+	.transaction_finality .transaction_finality_row {
+		flex-direction: column;
+		gap: var(--space-xs);
+
+		& > :nth-child(1),
+		& > :nth-child(2) {
+			width: 100%;
+		}
 	}
 }
