--- a/src/components/common/TransactionDetails/styles.pcss
+++ b/src/components/common/TransactionDetails/styles.pcss
@@ -26,3 +26,15 @@
 		width: 70%;
 	}
 }
+
+@media (max-width: 640px) {
+	.transaction_details .transaction_details_row {
+		flex-direction: column;
+		gap: var(--space-xs);
+
+		& > :nth-child(1),
+		& > :nth-child(2) {
+			width: 100%;
+		}
+	}
+}
