Update the info row component so it is more reusable

--- a/src/components/common/TransactionInfo/styles.pcss
+++ b/src/components/common/TransactionInfo/styles.pcss
@@ -44,6 +44,12 @@
 		white-space: nowrap;
 		text-overflow: ellipsis;
 		overflow: hidden;
+
+		& .transaction_info_value_container {
+			display: flex;
+			align-items: center;
+			gap: var(--space-xs);
+		}
 	}
 
 	& .transaction_info_currency {
