--- a/src/components/common/DirectionInfoRow/styles.pcss
+++ b/src/components/common/DirectionInfoRow/styles.pcss
@@ -1,4 +1,4 @@
-& .info_row {
+& .dir_info_row {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -7,7 +7,7 @@
 	min-height: 26px;
 
 	& > :nth-child(1) {
-		width: 30%;
+		width: 20%;
 		min-width: 0;
 	}
 
@@ -15,11 +15,11 @@
 		display: flex;
 		align-items: center;
 		gap: var(--space-xs);
-		width: 70%;
+		width: 80%;
 		cursor: pointer;
 		min-width: 0;
 
-		& .info_row_copy {
+		& .dir_info_copy {
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -31,7 +31,7 @@
 		}
 	}
 
-	& .info_row_label {
+	& .dir_info_label {
 		font-size: 0.875rem;
 		color: var(--color-gray-500);
 		line-height: 1.125rem;
@@ -39,7 +39,7 @@
 		white-space: normal;
 	}
 
-	& .info_row_value {
+	& .dir_info_value {
 		font-size: 0.875rem;
 		color: var(--color-gray-700);
 		line-height: 1.125rem;
@@ -49,7 +49,7 @@
 		min-width: 0;
 	}
 
-	& .info_row_value_text {
+	& .dir_info_value_text {
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
@@ -59,49 +59,49 @@
 		min-width: 0;
 	}
 
-	& .info_row_value.no_copy {
+	& .dir_info_value.no_copy {
 		cursor: default;
 	}
 }
 
-.info_row_wrapped {
+.dir_info_row_wrapped {
 	align-items: flex-start;
 
 	& > :nth-child(2) {
 		align-items: flex-start;
 
-		& .info_row_copy {
+		& .dir_info_copy {
 			justify-content: flex-start;
 			align-items: flex-start;
 		}
 	}
 }
 
-& .info_row_value.no_copy .info_row_copy {
+& .dir_info_value.no_copy .dir_info_copy {
 	display: none;
 }
 
 @media (max-width: 1024px) {
-	& .info_row_value:not(.no_copy) > .info_row_copy {
+	& .dir_info_value:not(.no_copy) > .dir_info_copy {
 		opacity: 1;
 		pointer-events: auto;
 	}
 }
 
 @media (min-width: 1025px) {
-	& .info_row_value:not(.no_copy) > .info_row_copy {
+	& .dir_info_value:not(.no_copy) > .dir_info_copy {
 		opacity: 0;
 		pointer-events: none;
 	}
 
-	& .info_row_value:not(.no_copy):hover > .info_row_copy {
+	& .dir_info_value:not(.no_copy):hover > .dir_info_copy {
 		opacity: 1;
 		pointer-events: auto;
 	}
 }
 
 @media (max-width: 640px) {
-	.info_row {
+	.dir_info_row {
 		flex-direction: column;
 		gap: var(--space-xs);
 
@@ -111,7 +111,7 @@
 			min-width: 0;
 		}
 
-		& .info_row_value_text {
+		& .dir_info_value_text {
 			white-space: nowrap;
 			overflow: hidden;
 			text-overflow: ellipsis;
