--- a/src/components/transaction/styles.pcss
+++ b/src/components/transaction/styles.pcss
@@ -17,6 +17,14 @@
 		align-items: flex-start;
 		gap: var(--space-m);
 
+		& .transaction_title {
+			font-size: 2rem;
+			font-weight: 500;
+			line-height: 2.25rem;
+			color: var(--color-gray-700);
+			letter-spacing: -0.64px;
+		}
+
 		& .transaction_divider {
 			width: 100%;
 			height: 1px;
