Center icon in notification

--- a/src/components/common/Notification/styles.pcss
+++ b/src/components/common/Notification/styles.pcss
@@ -16,6 +16,11 @@
 	animation-fill-mode: forwards;
 	animation-duration: 0.4s;
 	animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+	& .notification_icon {
+		width: 16px;
+		height: 16px;
+	}
 }
 
 .notification_show {
