Fix issues related to the background of each page

--- a/src/components/header/styles.pcss
+++ b/src/components/header/styles.pcss
@@ -1,6 +1,8 @@
 .header {
 	display: flex;
 	flex-direction: row;
+	max-width: 1920px;
+	margin: 0 auto;
 	width: 100%;
 	min-height: var(--header-height);
 	padding: var(--space-xs) var(--space-xl);
