--- a/src/components/transaction/styles.pcss
+++ b/src/components/transaction/styles.pcss
@@ -1,6 +1,8 @@
 .transaction {
 	display: flex;
 	flex-direction: column;
+	max-width: 1920px;
+	margin: 0 auto;
 	padding: var(--space-xl) var(--space-xl) var(--space-xxxxxl) var(--space-xl);
 	width: 100%;
 	min-height: calc(100vh - var(--header-height));
