--- a/src/components/home/styles.pcss
+++ b/src/components/home/styles.pcss
@@ -1,6 +1,8 @@
 .home {
 	display: flex;
 	flex-direction: column;
+	max-width: 1920px;
+	margin: 0 auto;
 	width: 100%;
 	height: calc(100vh - var(--header-height));
 	position: relative;
