--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,9 +1,9 @@
 #root {
 	display: flex;
 	flex-direction: column;
-	margin: 0 auto;
+	/* margin: 0 auto; */
 	min-height: 100vh;
-	max-width: 1920px;
+	/* max-width: 1920px; */
 	width: 100%;
 	overflow-x: hidden;
 	background-color: var(--color-gray-25);
