Fix icon button

--- a/src/components/transaction/styles.pcss
+++ b/src/components/transaction/styles.pcss
@@ -1,3 +1,9 @@
+.transaction_wrapper {
+	width: 100%;
+	min-height: 100vh;
+	background: linear-gradient(180deg, var(--color-gray-25) 0%, var(--color-gray-50) 100%);
+}
+
 .transaction {
 	display: flex;
 	flex-direction: column;
@@ -7,7 +13,6 @@
 	width: 100%;
 	min-height: calc(100vh - var(--header-height));
 	gap: var(--space-xl);
-	background: linear-gradient(180deg, var(--color-gray-25) 0%, var(--color-gray-50) 100%);
 	position: relative;
 
 	& .back_button {
