Add framer animations for home visuals

--- a/src/components/home/HomeVisuals/DesktopVisuals/styles.pcss
+++ b/src/components/home/HomeVisuals/DesktopVisuals/styles.pcss
@@ -10,10 +10,8 @@
 
 	& .desktop_visual {
 		position: absolute;
-		opacity: 0;
 		--illustration-rotate: 0deg;
-		animation: desktop_visuals_animation 0.7s cubic-bezier(0.23, 1, 0.32, 1) forwards;
-		transition: transform 0.7s cubic-bezier(0.23, 1, 0.32, 1);
+		will-change: transform;
 	}
 
 	& .visual_one {
@@ -22,31 +20,22 @@
 		left: 2.5%;
 		bottom: 20%;
 		--illustration-rotate: -14.66deg;
-		animation-delay: 0.1s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
 	}
+
 	& .visual_two {
 		width: clamp(192px, 13.3%, 288px);
 		height: auto;
 		left: 21%;
 		bottom: 9%;
 		--illustration-rotate: 10deg;
-		animation-delay: 0.3s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
 	}
+
 	& .visual_three {
 		width: clamp(160px, 13%, 240px);
 		height: auto;
-		position: absolute;
 		bottom: 9%;
 		transform: translateX(-50%);
 		--illustration-rotate: 0deg;
-		animation-delay: 0.5s;
-		animation: desktop_visuals_animation 0.7s cubic-bezier(0.23, 1, 0.32, 1) forwards;
 	}
 
 	& .visual_four {
@@ -55,31 +44,13 @@
 		right: 22%;
 		bottom: 9%;
 		--illustration-rotate: -10deg;
-		animation-delay: 0.7s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
 	}
+
 	& .visual_five {
 		width: clamp(180px, 12.15%, 270px);
 		height: auto;
 		right: 2.5%;
 		bottom: 20%;
 		--illustration-rotate: 10deg;
-		animation-delay: 1s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
-	}
-}
-
-@keyframes desktop_visuals_animation {
-	0% {
-		opacity: 0;
-		transform: translateY(60px) rotate(var(--illustration-rotate, 0deg));
-	}
-	100% {
-		opacity: 1;
-		transform: translateY(0) rotate(var(--illustration-rotate, 0deg));
 	}
 }
