--- a/src/components/home/HomeVisuals/TabletVisuals/styles.pcss
+++ b/src/components/home/HomeVisuals/TabletVisuals/styles.pcss
@@ -10,10 +10,7 @@
 
 	& .tablet_visual {
 		position: absolute;
-		opacity: 0;
-		--illustration-rotate: 0deg;
-		animation: desktop_visuals_animation 0.7s cubic-bezier(0.23, 1, 0.32, 1) forwards;
-		transition: transform 0.7s cubic-bezier(0.23, 1, 0.32, 1);
+		will-change: transform;
 	}
 
 	& .visual_one {
@@ -22,10 +19,6 @@
 		left: 4.3%;
 		bottom: 33%;
 		--illustration-rotate: -14.66deg;
-		animation-delay: 0.1s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
 	}
 
 	& .visual_two {
@@ -34,21 +27,14 @@
 		left: 11.43%;
 		bottom: 7%;
 		--illustration-rotate: 15deg;
-		animation-delay: 0.3s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
 	}
+
 	& .visual_three {
 		width: clamp(104px, 22%, 160px);
 		height: auto;
 		bottom: 22%;
 		transform: translateX(-50%);
 		--illustration-rotate: 0deg;
-		animation-delay: 0.5s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
 	}
 
 	& .visual_four {
@@ -57,31 +43,13 @@
 		right: 11.43%;
 		bottom: 7%;
 		--illustration-rotate: -10deg;
-		animation-delay: 0.7s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
 	}
+
 	& .visual_five {
 		width: clamp(104px, 19.9%, 180px);
 		height: auto;
 		right: 4.3%;
 		bottom: 33%;
 		--illustration-rotate: 10deg;
-		animation-delay: 0.9s;
-		&:hover {
-			--illustration-rotate: 0deg;
-		}
-	}
-}
-
-@keyframes desktop_visuals_animation {
-	0% {
-		opacity: 0;
-		transform: translateY(60px) rotate(var(--illustration-rotate, 0deg));
-	}
-	100% {
-		opacity: 1;
-		transform: translateY(0) rotate(var(--illustration-rotate, 0deg));
 	}
 }
