Complete review for home page

--- a/src/components/home/styles.pcss
+++ b/src/components/home/styles.pcss
@@ -17,3 +17,12 @@
 		background: linear-gradient(180deg, rgba(252, 252, 253, 0) 0%, var(--color-gray-25, #fcfcfd) 78.7%);
 	}
 }
+
+@media (max-width: 640px) {
+	.home .home_blur {
+		height: 29%;
+		border-radius: var(--border-radius-large);
+		opacity: 0.7;
+		background: linear-gradient(180deg, rgba(252, 252, 253, 0) 0%, var(--color-gray-25, #fcfcfd) 78.7%);
+	}
+}
