Fix media queries structure

--- a/src/components/common/DirectionInfoRow/styles.pcss
+++ b/src/components/common/DirectionInfoRow/styles.pcss
@@ -81,14 +81,14 @@
 	display: none;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1025px) and (max-width: 1920px) {
 	& .dir_info_value:not(.no_copy) > .dir_info_copy {
 		opacity: 1;
 		pointer-events: auto;
 	}
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 641px) and (max-width: 1024px) {
 	& .dir_info_value:not(.no_copy) > .dir_info_copy {
 		opacity: 0;
 		pointer-events: none;
