--- a/src/components/header/styles.pcss
+++ b/src/components/header/styles.pcss
@@ -10,7 +10,15 @@
 	gap: var(--space-m);
 
 	& .header_search {
-		min-width: 345px;
+		max-width: 394px;
+		width: 100%;
+	}
+}
+
+@media (min-width: 641px) and (max-width: 1024px) {
+	& .info_row_value:not(.no_copy) > .info_row_copy {
+		opacity: 1;
+		pointer-events: auto;
 	}
 }
 
