Fix search bar width in header

--- a/src/components/header/styles.pcss
+++ b/src/components/header/styles.pcss
@@ -15,10 +15,16 @@
 	}
 }
 
+@media (min-width: 1025px) and (max-width: 1920px) {
+	.header .header_search {
+		max-width: 394px;
+		width: 100%;
+	}
+}
 @media (min-width: 641px) and (max-width: 1024px) {
-	& .info_row_value:not(.no_copy) > .info_row_copy {
-		opacity: 1;
-		pointer-events: auto;
+	.header .header_search {
+		max-width: 345px;
+		width: 100%;
 	}
 }
 
